# remote-exploit

./: README.md  pyproject.toml  requirements.txt  server.py
.devcontainer/: devcontainer.json
app/: server.py
app/controllers/: list.py  main.py
app/http/: static.py
app/views/: list.html  main.html
app/views/templates/: small.html
scripts/: poetry-to-pip.sh
ui/templates/small/: display.css  header.css  main.css  small.css
