[tool.poetry]
name = "remote-exploit"
version = "0.1.0"
description = "A remote exploiting tool."
authors = ["Virinas-code <alexcode228@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.1.2"
coloredlogs = "^15.0.1"
verboselogs = "^1.7"
colorama = "^0.4.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
